utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/CommonModule.ide
package valid

typedef module CommonModule {
     label "Some nice Configuration Type"
}
