utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/WritePath.ide
package invalid

typedef module WriteModule {
    label "Some Label"

    module someModule: CommonModule
    module someOtherModule: CommonModule

    write someModule to "someModule"
    write someOtherModule to "someModule"
}
